added bootstrap containers, created intro video that loops, added froogaloop script for js later and created a main.js file for calling apis

--- a/crops.html
+++ b/crops.html
@@ -1,8 +1,4 @@
-<html>
-<head>
-	<title>Crops are crazy</title>
-</head>
-<body>
-<h1>crops</h1>
-</body>
-</html>
+<!-- place all content withing the container-fluid div -->
+<div class="container-fluid">
+    <h1>crops</h1>
+</div>
