--- a/forest.html
+++ b/forest.html
@@ -1,1 +1,4 @@
-<p>forest section</p>
+<!-- place all content withing the container-fluid div -->
+<div class="container-fluid">
+    <p>forest section</p>
+</div>
