--- a/opening.html
+++ b/opening.html
@@ -1,3 +1,12 @@
-<h2>This is a test</h2>
-<h2>Here is another test</h2>
-<p>this is some more text. more to come.</p>
+<!-- place all content withing the container-fluid div -->
+<div class="container-fluid">
+    <div class="covers" id="cover-1">
+        <div id="cover-title-1">
+            <h1>California drought</h1>
+            <p>How much water could a water truck truck if a water truck could truck water?</p>
+        </div>
+    <div class="vimeo">
+        <iframe src="//player.vimeo.com/video/91003876?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=1&amp;loop=1" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    </div>
+</div>
