--- a/solutions.html
+++ b/solutions.html
@@ -1,1 +1,4 @@
-<h1>Here are some solutions to California's water crisis.</h1>
+<!-- place all content withing the container-fluid div -->
+<div class="container-fluid">
+    <h1>Here are some solutions to California's water crisis.</h1>
+</div>
