--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	 	{name: "opening",  html: "opening.html",  css: "css/opening.css", related: ""},
 	 	{name: "forest",   html: "forest.html",   css: "css/forest.css",  related: ""},
 	 	{name: "history",  html: "history.html",  css: "css/history.css", related: ""},
-	 	{name: "crops",    html: "crops.html",    css: "css/crops.css",   related: ""}
+	 	{name: "crops",    html: "crops.html",    css: "css/crops.css",   related: ""},
+	 	{name: "solutions", html: "solutions.html", css: "css/solutions.css", related: ""}
 	 ];
 
 	 jQuery(document).ready(function($) {
