Starting Solutions Code

--- a/solutions.html
+++ b/solutions.html
@@ -1,4 +1,20 @@
 <!-- place all content withing the container-fluid div -->
 <div class="container-fluid">
-    <h1>Here are some solutions to California's water crisis.</h1>
+   <div id="header">
+   	Hello
+	   	<div id="city">
+	   	</div>
+	   	<div id="washing">
+	   	</div>
+	   	<div id="toilet">
+	   	</div>
+
+   </div>
+
+
+
+
+
+
+
 </div>
