added prefix-free js, and centered opening video

--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
 	 	});
 	 });
 	</script>
+	<style type="text/css">
+
+
+	</style>
 </head>
 <body>
 
 <!-- custom js -->
 <script src="js/main.js"></script>
+<script src="js/prefixfree.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
