--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<script src="js/jquery-2.0.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300|Oswald:400,700' rel='stylesheet' type='text/css'>
 	<script src="http://a.vimeocdn.com/js/froogaloop2.min.js" type="text/javascript"></script>
 	<script>
 
