Update to Solutions

--- a/solutions.html
+++ b/solutions.html
@@ -2,8 +2,9 @@
 <div class="container-fluid">
    <div id="header">
 	   	<div class="header-third" id="city">
+			<div class="animation-graphic">
 	   		<svg version="1.1" id="cityLighty" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+	 width="100%" height="300px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 					 <g>
 						<path fill="#4B574D" d="M2.075,87.828h18.397V47.354H2.075V87.828z M13.113,54.716h3.68v3.677h-3.68V54.716z M13.113,62.073h3.68
 							v3.679h-3.68V62.073z M13.113,69.432h3.68v3.68h-3.68V69.432z M13.113,76.79h3.68v3.68h-3.68V76.79z M5.753,54.716h3.68v3.677
@@ -50,11 +51,13 @@
 				<rect id="g3" x="26.048" y="31.509" fill="rgba(255,255,255,0)" width="3.764" height="3.763"/>
 				<rect id="g2" x="13.143" y="54.67" fill="rgba(255,255,255,0)" width="3.764" height="3.763"/>
 				</svg>
+				</div>
 	   	</div>
 
 	   	<div class="header-third" id="washing">
+			<div class="animation-graphic">
 		    <svg version="1.1" id="wishyWashy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		    	 width="100px" height="100px" viewBox="0 0 73.059 100" enable-background="new 0 0 73.059 100" xml:space="preserve">
+		    	 width="100%" height="300px" viewBox="0 0 73.059 100" enable-background="new 0 0 73.059 100" xml:space="preserve">
 		    <g>
 		    	<path fill="#AF420A" d="M70.524,18.906H2.534C1.133,18.906,0,20.066,0,21.495v75.916C0,98.843,1.134,100,2.534,100h67.991
 		    		c1.396,0,2.533-1.157,2.533-2.589V21.495C73.058,20.066,71.92,18.906,70.524,18.906z M9.617,23.635
@@ -70,11 +73,13 @@
 		    		C54.589,54.579,51.534,52.034,51.062,50.533z"/>
 		    </g>
 		    </svg>
+			</div>
 	   	</div>
 
 	   	<div class="header-third" id="toilet">
+			<div class="animation-graphic">
 	   		<svg version="1.1" id="toiletFlushy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+	 width="100%" height="300px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
 						 
 					<path fill="#CBB345" d="M74.559,86.104c7.205,6.177,8.233,13.896,8.233,13.896H22.064c0,0,0.023-3.532,1.358-6.544
 						c0.737-1.664,1.899-3.178,3.125-4.51c2.921-3.17,9.019-4.907,9.019-9.967c0-4.643-3.25-5.26-12.475-7.799S8.486,57.335,7.465,53.167
@@ -89,6 +94,7 @@
 						s2.765,0.232,3.72-0.034c0.954-0.266,1.909-1.69,0.804-1.765c-1.106-0.074-5.676,0-5.676,0s-3.971-0.225-4.977,0.524l-5.022,0.075
 						c0,0,0,0.149,0,0.823C71.973,8.88,71.973,12.328,71.973,12.328z"/>
 				</svg>
+				</div>
 	   	</div>
 	<!--end of header div-->
    </div>
@@ -98,7 +104,7 @@
   <div id="city-info">
   	<div id="leaky-pipe">
 	  	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		 width="306px" height="444px" viewBox="0 0 612 887" enable-background="new 0 0 612 887" xml:space="preserve">
+		 width="100%" height="100%" viewBox="0 0 612 887" enable-background="new 0 0 612 887" xml:space="preserve">
 				<path fill="#8D9876" d="M372,365H207V24c0,0,54-25,82.5,0s82.5,0,82.5,0V365z"/>
 				<g>
 					<path fill="#8D9876" d="M393,422c0,1.65-1.35,3-3,3H188c-1.65,0-3-1.35-3-3v-50c0-1.65,1.35-3,3-3h202c1.65,0,3,1.35,3,3V422z"/>
