--- a/cropbarchart.html
+++ b/cropbarchart.html
@@ -79,9 +79,9 @@
 	
 	var tip = d3.tip()
 		.attr('class', 'd3-tip')
-		.offset([-1, 0])
+		.offset([-1, 1])
 		.html(function(d) {
-			return "<strong>Value:</strong> <span style='color:red'>" + d.info.value + "</span>";
+			return "<strong>Value:</strong> <span style='color:red'>" + d.value + "</span>";
 		})
 		
 	var svg = d3.select("body").append("svg")
@@ -139,23 +139,41 @@
        .on('click', function(d, i){
 	        console.log(d3.selectAll('.databars')[0][i])
 			
-      d3.select(d3.selectAll('.databars')[0][i])
+			d3.select(d3.selectAll('.databars')[0][i])
 			   .attr('y', height)
 			   .attr('height', 0)
 			   .transition()
 			   .duration(800)
 			   .attr('y', y(d.value))
 			   .attr('height', height - y(d.value))
+			   .each('end', function(d){
+					var t_text = svg.append('text')
+					 	.attr('x', x(d.name) + 20)
+					 	.attr('y', height - 100);
+					
+					t_text.append('tspan')
+						.attr('dx', 0)
+						.attr('dy', 0)
+						.style({'fill':'white'})
+					 	.text("Actual:");
+
+					t_text.append('tspan')
+						.attr('dx', -50)
+						.attr('dy', 40)
+						.style('fill', 'white')
+						.text(d.value);
+				})
+				
 			   // this detects the end of animation
-			   .each('end', function(){
-					 d3.select(this).on('mouseover', tip.show)
-					 d3.select(this).on('mouseout', tip.hide);
+			   /*.each('end', function(){
+					 d3.select('.databars').on('mouseover', tip.show)
+					 d3.select('.databars').on('mouseout', tip.hide);
 					// svg.append('text')
 					// 						.attr('x', x(d.name) + 20)
 					// 						.attr('y', y(d.value) + 50)
 					// 						.text(d.value);
-			});
-
+			});*/
+			//d3.select(this).on('mouseover',tip.show);
 			d3.select(this).on('click', null);
 			d3.select(this).on('mousemove', null);
 			d3.select(this).on('mouseout', null);
