--- a/index.html
+++ b/index.html
@@ -1,51 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Water Project</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet" />
-	<script src="js/jquery-2.0.2.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300|Oswald:400,700' rel='stylesheet' type='text/css'>
-	<script src="http://a.vimeocdn.com/js/froogaloop2.min.js" type="text/javascript"></script>
-	<script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Running Dry | A look into some of the key elements of the California drought</title>
+    <!--<link href="css/fonts.css" rel="stylesheet" type="text/css" />-->
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery-2.0.2.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/jquery.jplayer.min.js" type="text/javascript"></script>
+    <script src="js/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,300|Oswald:400,700" rel="stylesheet" type="text/css">
+    <!--<script src="http://a.vimeocdn.com/js/froogaloop2.min.js" type="text/javascript"></script>-->
+    <style type="text/css">
 
-	/*
-	 *  To create a new section, add the necessary HTML and CSS file names to this variable.
-	 */
-	 var sections = [
-	 	{name: "opening",  html: "opening.html",  css: "css/opening.css", related: ""},
-	 	{name: "forest",   html: "forest.html",   css: "css/forest.css",  related: ""},
-	 	{name: "history",  html: "history.html",  css: "css/history.css", related: ""},
-	 	{name: "crops",    html: "crops.html",    css: "css/crops.css",   related: ""},
-	 	{name: "solutions", html: "solutions.html", css: "css/solutions.css", related: ""}
-	 ];
+        html,body{
+            overflow-x:hidden;
+        }
 
-	 jQuery(document).ready(function($) {
+        body{
+            font-family: "Open Sans", Helvetica, Arial, sans-serif;
+        }
 
-	 	$.each(sections, function(item, elm){
+    </style>
+    <script>
 
-	 		var $section = $('<section />').appendTo('body').attr('id', elm.name);
-	 		var timestamp = new Date().getTime();;
+    /*
+     *  To create a new section, add the necessary HTML and CSS file names to this variable.
+     */
+     var sections = [
+        {name: "opening",  html: "opening.html",  css: "css/opening.css", related: ""},
+        {name: "forest",   html: "forest.html",   css: "css/forest.css",  related: ""},
+        {name: "history",  html: "history.html",  css: "css/history.css", related: ""},
+        {name: "crops",    html: "crops.html",    css: "css/crops.css",   related: ""},
+        {name: "solutions", html: "solutions.html", css: "css/solutions.css", related: ""}
+     ];
 
-	 		$.ajax({
-	 			url      : elm.html,
-	 			dataType : 'html'
-	 		}).done(function(data){
-	 			$section.html(data);
-	 		})
+     jQuery(document).ready(function($) {
 
-	 		if('css' in elm){
-	 			$('head').append('<link href="' + elm.css + '?' + timestamp + '" rel="stylesheet" >');
-	 		}
+        $.each(sections, function(item, elm){
 
-	 	});
-	 });
-	</script>
-	<style type="text/css">
+            var $section = $('<section />').appendTo('body').attr('id', elm.name);
+            var timestamp = new Date().getTime();;
 
+            $.ajax({
+                url      : elm.html,
+                dataType : 'html'
+            }).done(function(data){
+                $section.html(data);
+            })
 
-	</style>
+            if('css' in elm){
+                $('head').append('<link href="' + elm.css + '?' + timestamp + '" rel="stylesheet" >');
+            }
+
+        });
+     });
+    </script>
 </head>
 <body>
 
