--- a/forest.html
+++ b/forest.html
@@ -9,49 +9,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link href="css/forest.css" type="text/css" rel="stylesheet">
 
-    <style>
-		video.cover{position:relative;left:50%;top:50%;-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%);transform:translate(-50%, -50%);height:100%;width:auto;}
-
-		iframe.cover{width:100%;height:100%;}
-		        @media screen and (min-aspect-ratio: 16/9){	
-		video.cover{height:auto;width:100%;}}
-		
-		.video-frame{
-			height:100%;
-			width:100%;
-		}
-
-		h2{
-			font-family: 'Oswald', sans-serif;
-			font-style:bold;
-			font-size:45px;
-			color: red;
-			z-index: 100;
-			}
-
-		h3{
-			font-family: 'Oswald', sans-serif;
-			font-size:30px;
-			color: red;
-			z-index: 100;
-		}
-		h3.subhead{
-			font-size:25px;
-			color:black;
-		}
-		p {
-			font-family: 'Open Sans', sans-serif;
-			font-size: 18px;
-			line-height: 24px;
-		}
-
-    </style>
-
 </head>
 <body>
 <div class="container-fluid" id="forest-container">
 
-<div class="row">
+<div class="row" id="forest-section1">
 
 	<div class="col-sm-10 col-sm-offset-1">
     	<video class="video-frame background-video" autoplay loop>
@@ -809,7 +771,7 @@
 
 	</div>
 
-	<div class="col-sm-4 col-sm-offset-2">
+	<div class="col-sm-4 col-sm-offset-">
 
 		<p>
 			Thinning the forest through prescribed burning and mechanical clearing can be controversial. Several sensitive species, including the spotted owl, call the Sierra forests home. Some argue thinning would disrupt wildlife habitat. Prescribed burning also raises air quality concerns.
