--- a/forest.html
+++ b/forest.html
@@ -771,7 +771,7 @@
 
 	</div>
 
-	<div class="col-sm-4 col-sm-offset-">
+	<div class="col-sm-4 col-sm-offset-2">
 
 		<p>
 			Thinning the forest through prescribed burning and mechanical clearing can be controversial. Several sensitive species, including the spotted owl, call the Sierra forests home. Some argue thinning would disrupt wildlife habitat. Prescribed burning also raises air quality concerns.
