added some more text

--- a/crops.html
+++ b/crops.html
@@ -1,4 +1,6 @@
 <!-- place all content withing the container-fluid div -->
 <div class="container-fluid">
-    <h1>crops</h1>
+    <h1>From forests to fields</h1>
+    <p>Agriculture uses 80 percent of California's water, so farmers in the Central Valley have been hit hard by the drought.</p><br/>
+    <p>Some crops use more water than others. See if you can guess which crops use the most water in our bar chart game.</p><br/>
 </div>
